# DAT160---Gruppe-6

multi_robot_challenge_23/: README.md  package.xml  setup.py
multi_robot_challenge_23/launch/: slam_robots.launch.py
multi_robot_challenge_23/multi_robot_challenge_23/: aucro_dect.py  bug_robot.py  slam_node.py
